Updated and added first forms code

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,57 @@
 ocr-main.ps1
+sample_result_file.json
+results/nameplate-other-15.JPG.json
+sample_train_result.json
+summary.txt
+summary2.txt
+summary_all.txt
+results/nameplate-lennox-3a27326a3678439b9a92712438efefb2.jpg.json
+results/nameplate-lennox-740841.jpg.json
+results/nameplate-lennox-Lennox 2.png.json
+results/nameplate-lennox-Lennoxtag2.jpg.json
+results/nameplate-other-1.JPG.json
+results/nameplate-other-10.JPG.json
+results/nameplate-other-11.JPG.json
+results/nameplate-other-12.JPG.json
+results/nameplate-other-13.JPG.json
+results/nameplate-other-14.JPG.json
+results/nameplate-other-16.JPG.json
+results/nameplate-other-17.JPG.json
+results/nameplate-other-18.JPG.json
+results/nameplate-other-19.JPG.json
+results/nameplate-other-2.JPG.json
+results/nameplate-other-20.JPG.json
+results/nameplate-other-21.JPG.json
+results/nameplate-other-22.JPG.json
+results/nameplate-other-23.jpg.json
+results/nameplate-other-24.jpg.json
+results/nameplate-other-3.JPG.json
+results/nameplate-other-4.JPG.json
+results/nameplate-other-5.JPG.json
+results/nameplate-other-6.JPG.json
+results/nameplate-other-7.JPG.json
+results/nameplate-other-8.JPG.json
+results/nameplate-other-9.JPG.json
+results/nameplate-trane-20-0.jpg.json
+results/nameplate-trane-2010-10-28_17-48-20_853.jpg.json
+results/nameplate-trane-ACR22Refrigerant.jpg.json
+results/nameplate-trane-ACR410Refrigerant.jpg.json
+results/nameplate-trane-AC_nameplate.jpg.json
+results/nameplate-trane-AS-Nameplate.jpg.json
+results/nameplate-trane-American StandardDataPlate.jpg.json
+results/nameplate-trane-NamePlate.jpg.json
+results/nameplate-trane-Trane-AC-Compressor-data-tag-DF-209-DJFs.jpg.json
+results/nameplate-trane-Trane-Condenser-Units-1.jpg.json
+results/nameplate-trane-TraneDataPlate.jpg.json
+results/nameplate-trane-TraneTag-LG.jpg.json
+results/nameplate-trane-help-s1.jpg.json
+results/nameplate-trane-nameplateHP17K062.jpg.json
+results/nameplate-york-1961_1_60.jpg.json
+results/nameplate-york-230_Ton_York_2530_0001.jpg.json
+results/nameplate-york-800_Ton_York_2545_0001-2.jpg.json
+results/nameplate-york-york-code-pak-1600-ton-chiller-p40526039_5.jpg.json
+results/nameplate-lennox-3a27326a3678439b9a92712438efefb2.jpg.json
+results/nameplate-lennox-740841.jpg.json
+results/nameplate-lennox-Lennox 2.png.json
+results/nameplate-lennox-Lennoxtag2.jpg.json
+results/nameplate-york-york_ykcgceq6-cpf_287904.jpg.json
