--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "azureFunctions.deploySubpath": "NameplateRecognizerFunction",
     "azureFunctions.projectLanguage": "PowerShell",
     "azureFunctions.projectRuntime": "~2",
-    "debug.internalConsoleOptions": "neverOpen"
+    "debug.internalConsoleOptions": "neverOpen",
+    "git.ignoreLimitWarning": true
 }
